add/readme: links to used technology

--- a/README.org
+++ b/README.org
@@ -3,6 +3,10 @@
  #+language: pl
 
 * Użyte oprogramowanie
-1. ETL --- [[https://kafka.apache.org][Apache Kafka]]
-2. Klient Kafki --- [[https://github.com/confluentinc/confluent-kafka-python][Confluent]]
-3. Data warehouse --- [[https://www.cockroachlabs.com/][CockroachDB]] (kompatybilny z PostgreSQL)
+1. ETL --- [[https://kafka.apache.org][Apache Kafka]][fn:kafka]
+2. Klient Kafki --- [[https://github.com/confluentinc/confluent-kafka-python][Confluent]][fn:confluent]
+3. Data warehouse --- [[https://www.cockroachlabs.com/][CockroachDB]][fn:cockroach] (kompatybilny z PostgreSQL)
+
+[fn:kafka][[https://kafka.apache.org]]
+[fn:confluent]https://github.com/confluentinc/confluent-kafka-python
+[fn:cockroach]https://www.cockroachlabs.com/
