add/readme: Add docker as part of our stach

--- a/README.org
+++ b/README.org
@@ -6,7 +6,9 @@
 1. ETL --- [[https://kafka.apache.org][Apache Kafka]][fn:kafka]
 2. Klient Kafki --- [[https://github.com/confluentinc/confluent-kafka-python][Confluent]][fn:confluent]
 3. Data warehouse --- [[https://www.cockroachlabs.com/][CockroachDB]][fn:cockroach] (kompatybilny z PostgreSQL)
+4. Zarządzanie usługami --- [[https://ww.wdocker.com][Docker]][fn:docker]
 
 [fn:kafka][[https://kafka.apache.org]]
 [fn:confluent]https://github.com/confluentinc/confluent-kafka-python
 [fn:cockroach]https://www.cockroachlabs.com/
+[fn:docker]https://www.docker.com
