update/readme: change latex class to report

--- a/README.org
+++ b/README.org
@@ -1,6 +1,7 @@
 #+TITLE: Wielowymiarowa analiza danych
  #+author: Patryk Gronkiewicz 164157, Hubert Baran 164141
  #+language: pl
+ #+latex_class: report
 
 * Użyte oprogramowanie
 1. ETL --- [[https://kafka.apache.org][Apache Kafka]][fn:kafka]
