--- a/README.org
+++ b/README.org
@@ -5,7 +5,7 @@
  #+latex_class: report
 
 * Użyte oprogramowanie
-1. ETL --- [[https://kafka.apache.org][Apache Kafka]][fn:kafka]
+** ETL --- [[https://kafka.apache.org][Apache Kafka]][fn:kafka]
 
    Apache Kafka to platforma open-source do rozproszonego przetwarzania danych w postaci strumieniowej.
 
@@ -28,7 +28,7 @@
    
    W naszym przypadku Producentem jest aplikacja Prometheus, a konsumentem baza danych Cockroach. W celu ładowania danych z Prometheusa użyto odpowiedniego [[https://github.com/Telefonica/prometheus-kafka-adapter][adaptera]][fn:adapter] stworzonego przez firmę Telefónica.
 
-2. Data warehouse --- [[https://www.cockroachlabs.com/][CockroachDB]][fn:cockroach] (kompatybilny z PostgreSQL)
+** Data warehouse --- [[https://www.cockroachlabs.com/][CockroachDB]][fn:cockroach] (kompatybilny z PostgreSQL)
 
 CockroachDB to rozproszona baza danych, której core jest dostępny za darmo.
 
@@ -41,7 +41,7 @@ odporności na awarie.
 CockroachDB wspiera protokół wymiany danych bazy PostgreSQL, co oznacza, że jest kompatybilna z
 tą bazą danych (i narzędziami opartymi o nią).
 
-3. Zarządzanie usługami --- [[https://ww.wdocker.com][Docker]][fn:docker]
+** Zarządzanie usługami --- [[https://ww.wdocker.com][Docker]][fn:docker]
 
 Docker to platforma Open Source umożliwiająca tworzenie kontenerów (containers)
 i uruchamianie w nich aplikacji.
@@ -55,9 +55,9 @@ nie instalujemy kolejnego systemu operacyjnego "w całości", jedynie potrzebne 
 Są więc znacznie lżejsze.
 
 Aby uruchomić kontener w systemie Windows, musimy wpierw podjąć następujące kroki:
-+ w panelu Funkcje systemu Windows uruchamiamy funkcje: Platforma funkcji Hypervisor systemu Windows,
-Platforma maszyn wirtualnych, Podsystem Windows dla systemu Linux (może być konieczne ponowne
-uruchomienie komputera)
++ w panelu Funkcje systemu Windows uruchamiamy potrzebne funkcje:.
+(Platforma funkcji Hypervisor systemu Windows,Platforma maszyn wirtualnych, Podsystem Windows dla
+systemu Linux. Może być konieczne ponowne uruchomienie komputera.)
 + zainstalowanie [[https://docs.microsoft.com/en-us/windows/wsl/install][WSL 2]]
 
 W projekcie wykorzystujemy mechanizm docker compose. Za jego pomocą z użyciem jednego pliku
@@ -70,8 +70,8 @@ kontener dla każdej z aplikacji: Zookeeper, Kafka, adapter do Kafki, Grafana, C
 W pliku określamy nazwę obrazu kontenera i parametry takie jak woluminy, porty przez które
 możliwa będzie komunikacja.
 
-4. Tworzenie wykresów --- [[https://grafana.com/][Grafana]][fn:grafana]
-5. Źródło danych --- [[https://prometheus.io][Prometheus]][fn:prometheus]
+** Tworzenie wykresów --- [[https://grafana.com/][Grafana]][fn:grafana]
+** Źródło danych --- [[https://prometheus.io][Prometheus]][fn:prometheus]
 
 [fn:kafka][[https://kafka.apache.org]]
 [fn:confluent]https://github.com/confluentinc/confluent-kafka-python
