--- a/README.org
+++ b/README.org
@@ -28,6 +28,8 @@
    
    W naszym przypadku Producentem jest aplikacja Prometheus, a konsumentem baza danych Cockroach. W celu ładowania danych z Prometheusa użyto odpowiedniego [[https://github.com/Telefonica/prometheus-kafka-adapter][adaptera]][fn:adapter] stworzonego przez firmę Telefónica.
 
+[fn:kafka][[https://kafka.apache.org]]
+[fn:adapter]https://github.com/Telefonica/prometheus-kafka-adapter
 ** Data warehouse --- [[https://www.cockroachlabs.com/][CockroachDB]][fn:cockroach]
 
 CockroachDB to rozproszona baza danych, której core jest dostępny za darmo.
@@ -74,6 +76,7 @@ kontener dla każdej z aplikacji: Zookeeper, Kafka, adapter do Kafki, Grafana, C
 W pliku określamy nazwę obrazu kontenera i parametry takie jak woluminy, porty przez które
 możliwa będzie komunikacja.
 
+[fn:docker]https://www.docker.com
 ** Tworzenie wykresów --- [[https://grafana.com/][Grafana]][fn:grafana]
 
 Grafana to system open source przeznaczony do monitorowania i analizy zbiorów danych
@@ -99,6 +102,7 @@ Grafanę wykorzystujemy jako narzędzie do przeprowadzania docelowych analiz
 danych po transformacjach przygotowujących je do tych analiz. Dane te przechowujemy
 w bazie danych CockroachDB.
 
+[fn:grafana]https://grafana.com/
 ** Źródło danych --- [[https://prometheus.io][Prometheus]][fn:prometheus]
 
 Prometheus to open source'owy toolkit do monitoringu i alertowania. Przechowuje szeregi
@@ -107,13 +111,11 @@ czasowe w modelu wielowymiarowym. Zawiera własny język zapytań PromQL.
 W naszym projekcie W Prometheuszu przechowujemy surowe dane zebrane w monitoringu serwera,
 które następnie są przekazywane do obróbki.
 
-[fn:kafka][[https://kafka.apache.org]]
-[fn:confluent]https://github.com/confluentinc/confluent-kafka-python
-[fn:cockroach]https://www.cockroachlabs.com/
-[fn:docker]https://www.docker.com
-[fn:grafana]https://grafana.com/
 [fn:prometheus]https://prometheus.io
-[fn:adapter]https://github.com/Telefonica/prometheus-kafka-adapter
+**  Data warehouse
+[[https://www.cockroachlabs.com/][CockroachDB]][fn:cockroach] (kompatybilny z PostgreSQL)
+[fn:cockroach]https://www.cockroachlabs.com/
+
 * Uruchomienie projektu
 ** Instalacja zależności
 Cały projekt można podzielić na trzy kluczowe elementy:
